specials on view.

--- a/app/views/comedians.erb
+++ b/app/views/comedians.erb
@@ -2,6 +2,6 @@
 <ul>
     <li>* Name <%= comedian.name %></li>
     <li>* Age <%= comedian.age %></li>
-    <li></li>
+    <li> * Specials <%= comedian.specials %> </li>
 </ul>
 <% end %>
