tests and methods for user story 2

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,5 +2,6 @@
 <ul>
   <li> Name: <%= comedian.name %></li>
   <li> Age: <%= comedian.age %></li>
+  <li>Special: <%= comedian.specials.name if comedian.specials %></li>
 </ul>
 <% end %>
