ATP for User Story 3

--- a/app/views/comedians/index.erb
+++ b/app/views/comedians/index.erb
@@ -1,5 +1,5 @@
 
-<% Comedian.average_age %>
+<p>Average Comedian Age: <%= Comedian.average_age %></p>
 <% @comedians.each do |c| %>
       <%= c.name %>
       <%= c.age %>
