--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,11 @@
 <% @comedians.each do |comedian| %>
-<%= comedian.name %>
-<%= comedian.age %>
+<%= comedian.name %><br/>
+<%= comedian.age %><br/>
   <% @specials.each do |special| %>
     <% if special.comedian_id == comedian.id %>
-    <%= special.name %>
+    <%= special.name %><br/>
     <% end %>
   <% end %>
-<%= "#{comedian.name} has #{Special.count(comedian.id)} specials" %>
+<%= "#{comedian.name} has #{Special.count(comedian.id)} specials" %><br/>
 <% end %>
 <%= "Average age: #{Comedian.average_age}" %>
