--- a/app/views/comedians.erb
+++ b/app/views/comedians.erb
@@ -2,5 +2,6 @@
 
   <% @comedians.each do |comedian| %>
     <p> <%= comedian.name %> </p>
+    <p> <%= comedian.age %> </p>
     <p> <%= comedian.specials.name %>
   <% end %>
