--- a/app/views/comedians.erb
+++ b/app/views/comedians.erb
@@ -1,7 +1,11 @@
 <h1>Comedians</h1>
-
+<div>
   <% @comedians.each do |comedian| %>
     <p> <%= comedian.name %> </p>
-    <p> <%= comedian.age %> </p>
-    <p> <%= comedian.specials.name %>
+    <p> Age: <%= comedian.age %> </p>
+    <% comedian.specials.each do |special|%>
+      <p> <%= "#{special.name}"%> </p>
+    <% end %>
   <% end %>
+  <p>Average Age: <%= @avg_age  %>
+</div>
